--- a/khan-exercises/exercises/tafel_van_12510.html
+++ b/khan-exercises/exercises/tafel_van_12510.html
@@ -23,7 +23,8 @@
                         "\\Huge{\\color{#6495ED}{ <var>A</var> } \\times \\color{#28AE7B}{ <var>B</var> } = {?}}",
                         "right" );
                     </div>
-                <div class="solution"><var>Answer</var></div> 
+                <div class="solution"><var>Answer</var>
+                </div> 
                 <div class="hints">
                      <p>Dit is onderdeel van de tafel van <var>B</var>. Denk aan de tafel van <var>B</var> in je hoofd.
                     </p>
