Incorporated feedback of Perceptum team, adjusted exercises by Sergio

--- a/khan-exercises/exercises/Verhaaltjessom_optellen_aftrekken.html
+++ b/khan-exercises/exercises/Verhaaltjessom_optellen_aftrekken.html
@@ -75,7 +75,7 @@
                 <p class="question">Hoeveel mensen zijn er bij de halte uitgestapt?</p>
                 <p class="solution"><var>Answer</var></p>
                 <div class="hints">
-                    <p>Dit is een optel- en een aftreksom.</p>
+                    <p>Er komen mensen <strong>erbij</strong> en er gaan mensen <strong>weg</strong>. Dit is dus een optel- en een aftreksom.</p>
                     <p>Als er niemand uitgestapt was, zaten er <var>start</var> + <var>erbij</var>  = <var>start + erbij</var> mensen in de bus.</p>
                     <p>Er zitten nu <var>end</var> mensen in de bus. Dus er zijn <var>start + erbij</var> - <var>end</var> = <var>Answer</var> mensen uitgestapt.</p>
                 </div>              
@@ -93,12 +93,11 @@
                 <p class="question">Hoeveel mensen zijn er bij de halte ingestapt?</p>
                 <p class="solution"><var>Answer</var></p>
                 <div class="hints">
-                     <p>Dit is een optel- en een aftreksom.</p>
+                    <p>Er komen mensen <strong>erbij</strong> en er gaan mensen <strong>weg</strong>. Dit is dus een optel- en een aftreksom.</p>
                     <p>Als er niemand ingestapt was, zaten er <var>start</var> - <var>eraf</var>  = <var>start - eraf</var> mensen in de bus.</p>
                     <p>Er zitten nu <var>end</var> mensen in de bus. Dus er zijn <var>end</var> - <var>start - eraf</var> = <var>Answer</var> mensen ingestapt.</p>
                 </div>              
             </div>
-            
         </div>     
     </div>
 </body>
