--- a/khan-exercises/exercises/addition_zonder_onthouden.html
+++ b/khan-exercises/exercises/addition_zonder_onthouden.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math graphie graphie-helpers-arithmetic word-problems">
 <head>
     <meta charset="UTF-8" />
-    <title>Addition 1</title>
+    <title>Optellen zonder onthouden</title>
     <script src="../khan-exercise.js"></script>
 </head>
 <body>
@@ -33,9 +33,9 @@
             <div class="hints">
                 <div>Eerst tel je de eenheden bij elkaar op. Dat is <var>B</var> + <var>D</var> = <var>B+D</var>.
                 </div>
-                <div>Tel dan de tientallen bij elkaar op. Dat is <var>A*10</var> + <var>C*10</var> = <var>A+C</var>.
+                <div>Tel dan de tientallen bij elkaar op. Dat is <var>A*10</var> + <var>C*10</var> = <var>(A+C)*10</var>.
                 </div>
-                <div>Nu kun je deze twee getallen bij elkaar optellen
+                <div>Nu kun je deze twee getallen bij elkaar optellen.
                 </div>
                 <div>Dus het antwoord is <var>B+D</var> + <var>(A+C)*10</var> = <var>Number1 + Number2</var>.
             </div>
