--- a/khan-exercises/exercises/alle_tafels.html
+++ b/khan-exercises/exercises/alle_tafels.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math word-problems getallen graphie">
 <head>
     <meta charset="UTF-8" />
-    <title>Alle tafels van 1 tot en met 10, 12, 25, 50 en 100</title>
+    <title>Alle tafels tot nu toe</title>
     <script src="../khan-exercise.js"></script>
 </head>
 <body>
