--- a/khan-exercises/exercises/het_dubbele.html
+++ b/khan-exercises/exercises/het_dubbele.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
 
-            <div>Daar komen bij het verdubbelen precies <var>Number</var> knikker<span data-if="Number !== 1">s</span> bij. Nu hebben wij er in totaal:
+            <div>Daar kom<span data-if="Number !== 1">en</span><span data-if="Number ==1">t</span> bij het verdubbelen precies <var>Number</var> knikker<span data-if="Number !== 1">s</span> bij. Nu hebben wij er in totaal:
                 <div class="graphie">
                     init({
                     range: [[-24, 24], [0, 10]],
@@ -73,7 +73,7 @@
                 </div>
             </div> 
         
-            <div>Door verder te tellen kom je uit op <var>Answer</var> knikker<span data-if="Number !== 1">s</span>.
+            <div>Door verder te tellen kom je uit op <var>Answer</var> knikker<span data-if="Answer !== 1">s</span>.
             </div>
         </div>            
     </div>
