--- a/khan-exercises/exercises/gepast_betalen_tot_100_hele_euro.html
+++ b/khan-exercises/exercises/gepast_betalen_tot_100_hele_euro.html
@@ -19,7 +19,7 @@
         </div>
         <div class="problems">
             <div>
-                <div class="question">Hoe zou je €<var>Totaalbedrag</var> gepast betalen met zo weinig mogelijk briefjejes?
+                <div class="question">Hoe zou je €<var>Totaalbedrag</var> gepast betalen met zo weinig mogelijk briefjes?
                 </div>
                 <div class="solution" data-type="multiple">
                     <p><span class="sol"><var>Aantal50</var></span><code>\text{ 50 euro}</code></p>
@@ -33,17 +33,28 @@
         </div>
         <div class="hints">
                 <p>Begin met kijken of het grootste briefje (50 euro) in het bedrag past.</p>
-                <div data-if="Aantal50===1">1 briefje van 50 euro past nog in €<var>Totaalbedrag</var>, maar 2 is teveel. We houden dan <var>Totaalbedrag</var> euro - 50 euro = <var>Totaalbedrag - 50</var> euro over.
-                </div>
-                <div data-else-if="Aantal50===0">1 briefje van 50 euro past niet meer in <var>Totaalbedrag</var>. Kijk nu of een briefje van 20 euro er wel in past.</div>
-                <div data-if="((Aantal50===1) && (Aantal20===2))">Het volgende briefje is 20 euro. Deze past 2 keer in <var>Totaalbedrag - 50 </var> en dan is er nog <var>Totaalbedrag - 50 </var> euro - 40 = <var>Totaalbedrag - 90</var> over.</div>
-                <div data-if="(Aantal50===1) && (Aantal20===2) && ((Aantal5+Aantal2+Aantal1) !== 0)">Van het overgebleven geld moet je kijken of er nog meer briefjes in passen op dezelfde wijze als voorheen.</div>
-                <div data-if="(Aantal50===1) && (Aantal20===2) && (Aantal5 !== 0)">1 briefje van 5 euro past nog in <var>Totaalbedrag - 90</var>, maar 2 is te veel. We houden dan <var>Totaalbedrag - 90</var> euro - 5 euro = <var>Totaalbedrag - 95</var> over.</div>
-                <div data-if="(Aantal50===1) && (Aantal20===2) && (Aantal5 !== 0) && (Aantal2 ===2)">In het overgebleven geld passen niet één maar zelfs twee muntjes van 2 euro. We houden <var>Totaalbedrag - 95</var> euro - 4 euro = <var>Totaalbedrag - 99</var> over. We hebben dus 1 keer 50 euro, 2 keer 20 euro, 1 keer 5 euro en 2 keer 2 euro gebruikt.</div>
-                <div data-if="(Aantal50===1) && (Aantal20===2) && (Aantal5 !== 0) && (Aantal2 ===1)">In het overgebleven geld past één muntje van 2 euro. We houden <var>Totaalbedrag - 95</var> euro - 2 euro = <var>Totaalbedrag - 97</var> over. We hebben dus 1 keer 50 euro, 2 keer 20 euro, 1 keer 5 euro en 1 keer 2 euro gebruikt.</div>
-                <div data-else>Kijk eerst of 50 euro er in past en hoe vaak, dan hoe vaak je nog 20 euro erin kan passen enzovoorts.</div>
 
-    </div>     
+                <div data-if="Aantal50===1">1 briefje van 50 euro past nog in €<var>Totaalbedrag</var>, maar 2 is teveel. We houden dan <var>Totaalbedrag</var> euro - <var>Aantal50*50</var> euro = <var>Totaalbedrag - Aantal50*50</var> euro over.
+                </div>
+                <div data-else-if="Aantal50===0">1 briefje van 50 euro past niet in <var>Totaalbedrag</var>. Kijk nu of een briefje van 20 euro er wel in past.</div>
+
+                <div data-if="Aantal20>0">Het volgende briefje is 20 euro. Deze past <var>Aantal20</var> keer in <var>Totaalbedrag - Aantal50*50</var> en dan is er nog <var>Totaalbedrag - Aantal50*50 </var> euro - <var>Aantal20*20</var> euro = <var>Totaalbedrag - Aantal50*50 - Aantal20*20</var> euro over.</div>
+                <div data-else-if="Aantal20===0">1 briefje van 20 euro past niet in <var>Totaalbedrag - Aantal50*50</var>. Kijk nu of een briefje van 10 euro er wel in past.</div>
+
+                <div data-if="Aantal10>0">Het volgende briefje is 10 euro. Deze past <var>Aantal10</var> keer in <var>Totaalbedrag - Aantal50*50 - Aantal20*20</var> en dan is er nog <var>Totaalbedrag - Aantal50*50 - Aantal20*20</var> euro - <var>Aantal10*10</var> euro = <var>Totaalbedrag - Aantal50*50 - Aantal20*20 - Aantal10*10</var> euro over.</div>
+                <div data-else-if="Aantal10===0">1 briefje van 10 euro past niet meer in <var>Totaalbedrag - Aantal50*50 - Aantal20*20</var>. Kijk nu of een briefje van 5 euro er wel in past.</div>
+
+                <div data-if="Aantal5>0">Het volgende briefje is 5 euro. Deze past <var>Aantal5</var> keer in <var>Totaalbedrag - Aantal50*50 - Aantal20*20 - Aantal10*10</var> en dan is er nog <var>Totaalbedrag - Aantal50*50 - Aantal20*20 - Aantal10*10</var> euro - <var>Aantal5*5</var> euro = <var>Totaalbedrag - Aantal50*50 - Aantal20*20 - Aantal10*10 - Aantal5*5</var> euro over.</div>
+                <div data-else-if="Aantal5===0">1 briefje van 5 euro past niet meer in <var>Totaalbedrag - Aantal50*50 - Aantal20*20 - Aantal10*10</var>. Kijk nu of een muntje van 2 euro er wel in past.</div>
+
+                <div data-if="Aantal2>0">Het volgende muntje is 2 euro. Deze past <var>Aantal2</var> keer in <var>Totaalbedrag - Aantal50*50 - Aantal20*20 - Aantal10*10 - Aantal5*5</var> en dan is er nog <var>Totaalbedrag - Aantal50*50 - Aantal20*20 - Aantal10*10 - Aantal5*5</var> euro - <var>Aantal2*2</var> euro = <var>Totaalbedrag - Aantal50*50 - Aantal20*20 - Aantal10*10 - Aantal5*5 - Aantal2*2</var> euro over.</div>
+                <div data-else-if="Aantal2===0">1 muntje van 2 euro past niet meer in <var>Totaalbedrag - Aantal50*50 - Aantal20*20 - Aantal10*10 - Aantal5*5</var>. Kijk nu of een muntje van 1 euro er wel in past.</div>
+
+                <div data-if="Aantal1>0">Het laatste muntje is 1 euro. Deze past <var>Aantal1</var> keer in <var>Totaalbedrag - Aantal50*50 - Aantal20*20 - Aantal10*10 - Aantal5*5 - Aantal2*2</var> en dan is er <var>Totaalbedrag - Aantal50*50 - Aantal20*20 - Aantal10*10 - Aantal5*5 - Aantal2*2</var> euro - <var>Aantal1*1</var> euro = <var>Totaalbedrag - Aantal50*50 - Aantal20*20 - Aantal10*10 - Aantal5*5 - Aantal2*2 - Aantal1*1</var> euro over.</div>
+                <div data-else-if="Aantal1===0">1 muntje van 1 euro past niet meer in <var>Totaalbedrag - Aantal50*50 - Aantal20*20 - Aantal10*10 - Aantal5*5 - Aantal2*2</var>.</div>
+                
+                <div>Dus om €<var>Totaalbedrag</var> gepast te betalen hebben we <var>Aantal50</var> briefje<span data-if="Aantal50 !== 1">s</span> van 50, <var>Aantal20</var> briefje<span data-if="Aantal20 !== 1">s</span> van 20, <var>Aantal10</var> briefje<span data-if="Aantal10 !== 1">s</span> van 10, <var>Aantal5</var> briefje<span data-if="Aantal5 !== 1">s</span> van 5, <var>Aantal2</var> muntje<span data-if="Aantal2 !== 1">s</span> van 2 en <var>Aantal1</var> muntje<span data-if="Aantal1 !== 1">s</span> van 1 nodig.</div>
+        </div>     
     </div>
 </body>
 </html>
