--- a/khan-exercises/exercises/ordering_numbers_till_100_tiental.html
+++ b/khan-exercises/exercises/ordering_numbers_till_100_tiental.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math math-format graphie graphie-helpers interactive">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Getallen tot 100 in volgorde zetten</title>
+    <title>Getallen tot 100 zelfde tiental in volgorde zetten</title>
     <script src="../khan-exercise.js"></script>
 
     <style type="text/css">
@@ -19,6 +19,7 @@
 <body>
     <div class="exercise">
         <div class="vars">
+            <var id="tiental">randRange( 0, 9)</var>
             <var id="COLORS">KhanUtil.shuffle([ "blue", "green", "red", "purple", "orange", "brown", "gray", "teal", "olive" ])</var>
 
             <var id="NUMS">(function() {
@@ -27,7 +28,6 @@
                 var used = {};
 
                 var arrLength = randRange( 4, 6 );
-                var tiental = randRange( 0, 9);
                 for ( var i = 0; i &lt; arrLength; i++ ) {
                     var num = tiental*10 + randRange( 0, 9 );
 
@@ -96,13 +96,13 @@
                     <div class="graphie" id="number-line">
                         init({
                             range: [ [-1, 101], [-1, 1] ],
-                            scale: [ 4.5, 40 ]
+                            scale: [13.5, 40 ]
                         });
 
                         style({
                             stroke: "#666"
                         }, function() {
-                            graph.nl = numberLine(0, 100, 10 );
+                            graph.nl = numberLine((tiental-1)*10, (tiental+2)*10, 10 );
                         });
                     </div>
                     <div class="graphie" data-update="number-line">
@@ -110,8 +110,8 @@
 
                         var position = "above";
                         $.each( NUMS_SORT, function( i, el ) {
-                            ellipse(  [ 0 + el[0], 0 ], [ 0.89, 0.1 ], { "stroke-width": 0, fill: el[1] } );
-                            label( [ 0 + el[0], 0 ], "\\color{" + el[1] + "}{" + el[0] + "}", position, { labelDistance: 5 } );
+                            ellipse(  [ 0 + el[0] - 10*(tiental-1), 0 ], [ 0.3, 0.101 ], { "stroke-width": 0, fill: el[1] } );
+                            label( [ 0 + el[0] - 10*(tiental-1), 0 ], "\\color{" + el[1] + "}{" + el[0] + "}", position, { labelDistance: 5 } );
                             position = ( position === "above" ? "below" : "above" );
                         } );
                     </div>
