From Iktel to iktel.nl

--- a/javascript/shared-package/hover-card-test.html
+++ b/javascript/shared-package/hover-card-test.html
@@ -60,7 +60,7 @@ var SAMPLE_PROFILE_DATA = {
         "isOwned": true,
         "name": "FullTimer",
         "points": 0,
-        "safeExtendedDescription": "Word een Full-time medewerker bij de Iktel."
+        "safeExtendedDescription": "Word een Full-time medewerker bij iktel.nl."
     }]
 };
 
