--- a/khan-exercises/exercises/the_fundamental_theorem_of_arithmetic.html
+++ b/khan-exercises/exercises/the_fundamental_theorem_of_arithmetic.html
@@ -92,8 +92,11 @@
                         }, []).join("\\cdot");
                         answerPreview += " = " + graph.computeTotal();
 
-                        $("#answer-preview code").text(answerPreview);
-                        MathJax.Hub.Queue(["Reprocess", MathJax.Hub, $("#answer-preview")[0]]);
+                        //$("#answer-preview code").text(answerPreview);
+                        //MathJax.Hub.Queue(["Reprocess", MathJax.Hub, $("#answer-preview")[0]]);
+                        answerPreview += " = " + graph.computeTotal();
+
+                        KhanUtil.processMath($("#answer-preview code")[0], answerPreview, true);
                     };
 
                     _.each(PRIMES, function(prime, y) {
@@ -168,7 +171,7 @@
 
             <div class="solution" data-type="custom">
                 <div class="instruction">
-                    Click the orange arrows to change your answer.
+                    Klik op de oranje pijlen om je antwoord te veranderen.
                     <p id="answer-preview"><code>=1</code></p>
                 </div>
                 <div class="guess">GRAPHIE.computeTotal()</div>
