--- a/khan-exercises/exercises/multiplying_decimals.html
+++ b/khan-exercises/exercises/multiplying_decimals.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-require="math math-format graphie graphie-helpers-arithmetic word-problems">
+<html data-require="math math-format graphie dutchadder word-problems">
 <head>
     <meta charset="UTF-8" />
     <title>Kommagetallen vermenigvuldigen</title>
