--- a/khan-exercises/exercises/adding_and_subtracting_decimals_word_problems.html
+++ b/khan-exercises/exercises/adding_and_subtracting_decimals_word_problems.html
@@ -51,7 +51,7 @@
             </div>
             </div>
 
-            <div>
+            <!--<div>
 
                 <div class="vars">
                 <var id="meters">randRange(1, 3)*100</var>
@@ -94,7 +94,7 @@
 
 
                 <div class="vars">
-                <!--2,6 changed to 1,3 because of change from pon to kilo-->
+
                 <var id="G">randRange(1,3)*100</var>
                 <var id="H">randRange(1,9)*10</var>
                 <var id="I">randRange(1,9)*1</var>
@@ -255,7 +255,7 @@
             graph.adder.showHint();</div>
                 <p class="solution" data-tt="question20"><var>person(1)</var> travels <var>solution</var> <var>plural(distance(1))</var> in total.</p>
             </div>
-            </div>
+            </div>-->
             </div>
 
 
