--- a/khan-exercises/exercises/adding_decimals.html
+++ b/khan-exercises/exercises/adding_decimals.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-translatable data-require="math graphie graphie-helpers-arithmetic">
+<html data-translatable data-require="math math-format graphie dutchadder">
 <head>
     <meta charset="UTF-8" />
     <title>Adding decimals</title>
@@ -20,7 +20,7 @@
 
     <div class="problems">
         <div>
-            <p class="question"><code>\Huge{<var>A_FLOAT.toFixed( A_DECIMAL )</var> + <var>B_FLOAT.toFixed( B_DECIMAL )</var> = {?}}</code></p>
+            <p class="question"><code>\Huge{<var>dutchDec(A_FLOAT.toFixed( A_DECIMAL ))</var> + <var>dutchDec(B_FLOAT.toFixed( B_DECIMAL ))</var> = {?}}</code></p>
             <div class="solution" data-type="decimal"><var>A_FLOAT + B_FLOAT</var></div>
         </div>
     </div>
