--- a/khan-exercises/exercises/adding_decimals_2.html
+++ b/khan-exercises/exercises/adding_decimals_2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-require="math graphie graphie-helpers-arithmetic">
+<html data-require="math math-format graphie dutchadder">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Adding decimals 2</title>
@@ -31,11 +31,12 @@
                     return result;
                 })()</var>
             <var id="DUMMY">[]</var>
+			<var id="dutchsol">dutchDec(A / pow( 10, A_DECIMAL ) + B / pow( 10, B_DECIMAL ))</var>
         </div>
 
     <div class="problems">
         <div>
-            <p class="question"><code>\Huge{<var>roundTo( A_DECIMAL, A * pow( 10, -A_DECIMAL ) ).toFixed( A_DECIMAL )</var> + <var>roundTo( B_DECIMAL, B * pow( 10, -B_DECIMAL ) ).toFixed( B_DECIMAL )</var> = {?}}</code></p>
+            <p class="question"><code>\Huge{<var>dutchDec(roundTo( A_DECIMAL, A * pow( 10, -A_DECIMAL ) ).toFixed( A_DECIMAL ))</var> + <var>dutchDec(roundTo( B_DECIMAL, B * pow( 10, -B_DECIMAL ) ).toFixed( B_DECIMAL ))</var> = {?}}</code></p>
             <div class="solution" data-type="decimal"><var>A / pow( 10, A_DECIMAL ) + B / pow( 10, B_DECIMAL )</var></div>
             <div class="graphie" id="numbers">
                 graph.adder = new Adder( NEW_A, NEW_B, A_DIGITS, B_DIGITS );
