Fix for dividing_decimals_1 and dividing_decimals_0.5

--- a/khan-exercises/exercises/dividing_decimals_0.5.html
+++ b/khan-exercises/exercises/dividing_decimals_0.5.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html data-require="math graphie graphie-helpers-arithmetic">
+<html data-require="math graphie dutchadder3">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Division 3</title>
+    <title>Staartdelen</title>
     <script src="../khan-exercise.js"></script>
 </head>
 <body>
