--- a/khan-exercises/exercises/dividing_decimals_1.html
+++ b/khan-exercises/exercises/dividing_decimals_1.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html data-translatable data-require="math graphie graphie-helpers-arithmetic">
+<html data-translatable data-require="math graphie dutchadder3">
 <head>
     <meta charset="UTF-8" />
-    <title>Het delen van kommagetallen 1 (Amerikaanse versie, wordt aangewerkt)</title>
+    <title>Het delen van kommagetallen 1</title>
     <script src="../khan-exercise.js"></script>
 </head>
 <body>
