--- a/khan-exercises/exercises/dividing_decimals_2.html
+++ b/khan-exercises/exercises/dividing_decimals_2.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html data-translatable data-require="math graphie graphie-helpers-arithmetic">
+<html data-translatable data-require="math graphie dutchadder3">
 <head>
     <meta charset="UTF-8" />
-    <title>Kommagetallen delen 2 (Amerikaanse versie, wordt aan gewerkt)</title>
+    <title>Kommagetallen delen 2 </title>
     <script src="../khan-exercise.js"></script>
 </head>
 <body>
