--- a/khan-exercises/exercises/dividing_decimals_4.html
+++ b/khan-exercises/exercises/dividing_decimals_4.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-require="math graphie graphie-helpers-arithmetic">
+<html data-require="math graphie dutchadder3">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Dividing decimals 4</title>
