Fixed language issues

--- a/khan-exercises/exercises/linear_equations_4.html
+++ b/khan-exercises/exercises/linear_equations_4.html
@@ -49,7 +49,7 @@
                     <var id="E">randRange( 2, 8 )</var>
                     <var id="ANSWER">( E * D - B ) / ( A - E * C )</var>
                 </div>
-                <p data-tt="question2" class="question">Los <code>x</code> op:</p>
+                <p data-tt="question2" class="question">Los op voor <code>x</code>:</p>
                 <div><code>\dfrac{<var>expr(["*", A, "x"])</var> + <var>B</var>}{<var>expr(["*", C, "x"])</var> + <var>D</var>} = <var>E</var></code></div>
 
                 <p class="solution"><var>ANSWER</var></p>
