--- a/khan-exercises/exercises/rounding_numbers.html
+++ b/khan-exercises/exercises/rounding_numbers.html
@@ -10,7 +10,7 @@
 
     <div class="problems">
         <div data-weight="2">
-            <div class="vars">
+          <!--  <div class="vars">
                 <var id="DIGITS">shuffle( [1, 2, 3, 4, 5, 6, 7, 8, 9], 5 )</var>
                 <var id="NUM">+DIGITS.join( "" )</var>
                 <var id="PLACE">randFromArray([ -2, -3 ])</var>
@@ -46,7 +46,7 @@
                     }
                 </div>
             </div>
-        </div>
+        </div>-->
 
         <div data-weight="3">
             <div class="vars">
