--- a/khan-exercises/exercises/subtracting_decimals.html
+++ b/khan-exercises/exercises/subtracting_decimals.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-require="math graphie graphie-helpers-arithmetic">
+<html data-require="math math-format graphie dutchadder3">
 <head>
     <meta charset="UTF-8" />
     <title>Kommagetallen aftrekken</title>
@@ -20,7 +20,7 @@
 
         <div class="problems">
             <div>
-                <p><code>\Huge{<var>A_FLOAT.toFixed( A_DECIMAL )</var> - <var>B_FLOAT.toFixed( B_DECIMAL )</var> = {?}}</code></p>
+                <p><code>\Huge{<var>tryStringComma(A_FLOAT.toFixed( A_DECIMAL ))</var> - <var>tryStringComma(B_FLOAT.toFixed( B_DECIMAL) )</var> = {?}}</code></p>
                 <div class="solution" data-type="decimal"><var>A_FLOAT - B_FLOAT</var></div>
             </div>
         </div>
