--- a/khan-exercises/exercises/adding_and_subtracting_decimals_word_problems.html
+++ b/khan-exercises/exercises/adding_and_subtracting_decimals_word_problems.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-translatable data-require="math word-problems spin graphie graphie-helpers-arithmetic">
+<html data-translatable data-require="math math-format word-problems spin graphie dutchadder3">
 <head>
     <meta charset="UTF-8" />
     <title>Redactiesommen kommagetallen optellen en aftrekken</title>
