replace dutchdivider with dutchadder3

--- a/khan-exercises/exercises/division_2.html
+++ b/khan-exercises/exercises/division_2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-require="math graphie dutchdivider">
+<html data-require="math graphie dutchadder3">
 <head>
     <meta charset="UTF-8" />
     <title>Division 2</title>
