--- a/khan-exercises/exercises/division_3.html
+++ b/khan-exercises/exercises/division_3.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-translatable data-require="math graphie dutchdivider">
+<html data-translatable data-require="math graphie dutchadder3">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Division 3</title>
