--- a/khan-exercises/exercises/division_4.html
+++ b/khan-exercises/exercises/division_4.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-translatable data-require="math graphie dutchdivider">
+<html data-translatable data-require="math graphie dutchadder3">
 <head>
     <meta charset="UTF-8" />
     <title>Delen 4</title>
