Fixes problem of answer-button-failure for certain questions

--- a/khan-exercises/exercises/arithmetic_word_problems_2.html
+++ b/khan-exercises/exercises/arithmetic_word_problems_2.html
@@ -23,7 +23,7 @@
                 <p class="question" data-tt="question2">
                 Hoeveel kost de <var>color(2)</var> <var>clothing(2)</var>?
                 </p>
-                <div class="solution" data-forms="dollar"><var>TOTAL</var></div>
+                <div class="solution"><var>TOTAL</var></div>
                 
                 <div class="hints">
                     <p data-tt="hint1">
@@ -51,7 +51,7 @@
                 <p class="question" data-tt="question4">
                 Hoeveel kost de <var>color(2)</var> <var>clothing(2)</var>?
                 </p>
-                <div class="solution" data-forms="dollar"><var>NUM1</var></div>
+                <div class="solution"><var>NUM1</var></div>
                 <div class="hints">
                     <p data-tt="hint4">
                     De prijs van de <var>color(1)</var> <var>clothing(1)</var>
