--- a/khan-exercises/exercises/greatest_common_divisor.html
+++ b/khan-exercises/exercises/greatest_common_divisor.html
@@ -32,7 +32,7 @@
         </div>
 
         <div class="hints">
-            <p data-tt="hint1">De grootste gemene deler is de grootste factor (getal) waar zowel <var>A</var> en <var>B</var>.</p>
+            <p data-tt="hint1">De grootste gemene deler is de grootste factor (getal) waar zowel <var>A</var> en <var>B</var> deelbaar door zijn.</p>
             <div>
                 <p data-if="A === 1" data-tt="hint2">De enige factor van 1 is 1.</p>
                 <p data-else data-tt="hint3">De factoren van <var>A</var> zijn <var>A_FACTORS</var>.</p>
