--- a/khan-exercises/exercises/order_of_operations.html
+++ b/khan-exercises/exercises/order_of_operations.html
@@ -19,7 +19,7 @@
 
         <div class="problems">
             <div id="order-of-operations">
-                <p data-tt="question1" class="question">Vereenvoudig de volgende vergelijking.</p>
+                <p data-tt="question1" class="question">Los de vergelijking op.</p>
                 <p class="problem"><code>
                         <var>A</var> + (<var>B</var> \times <var>C</var>)
                 </code></p>
