--- a/khan-exercises/exercises/rounding_whole_numbers.html
+++ b/khan-exercises/exercises/rounding_whole_numbers.html
@@ -43,9 +43,9 @@
     <div class="hints">
         <p data-tt="hint1">Er zijn twee manieren op dit probleem op te lossen.</p>
         <p data-tt="hint2">Eerste manier: Kijk naar het <var>placesLeftOfDecimal[ -1 - PLACE ]</var> cijfer achter de komma  <code><var>DIGITS[ 5 + PLACE ]</var></code> om te zien of we het gehele getal naar boven of naar beneden moeten afronden.</p>
-        <p data-tt="hint3" data-if="DIGITS[ 5 + PLACE ] >= 5" data-tt="hint3">Omdat het getal achter de komma <span data-if="DIGITS[ 5 + PLACE ] > 5">of hoger</span><span data-else>gelijk aan</span> <code>5</code> is, ronden we af naar boven, het antwoord wordt <code><var>commafy( ROUNDED )</var></code>.</p>
-        <p data-else data-tt="hint4">Omdat het getal achter de komma kleiner is dan <code>5</code>, ronden we af naar beneden, ronden we af naar boven, het antwoord wordt <code><var>commafy( ROUNDED )</var></code>.</p>
-        <p data-tt="hint5">Tweede manier: bedenk welk gedeelte van de getallenlijn het dichtstbij <var>NUM</var> ligt, dit gedeelde is blauw omcirkeld..</p>
+        <p data-tt="hint3" data-if="DIGITS[ 5 + PLACE ] >= 5" data-tt="hint3">Omdat het getal achter de komma <span data-if="DIGITS[ 5 + PLACE ] > 5">of hoger</span><span data-else>gelijk aan</span> <code>5</code> is, ronden we af naar boven, het antwoord wordt <code><var> (ROUNDED) </var></code>.</p>
+        <p data-else data-tt="hint4">Omdat het getal achter de komma kleiner is dan <code>5</code>, ronden we af naar beneden, ronden we af naar boven, het antwoord wordt <code><var>(ROUNDED )</var></code>.</p>
+        <p data-tt="hint5">Tweede manier: bedenk welk gedeelte van de getallenlijn het dichtstbij <var>NUM</var> ligt, dit gedeelte is blauw omcirkeld..</p>
         <div class="graphie">
             init({
                 range: [ [ -0.06 * pow( 10, -PLACE ) , 1.3 * pow( 10, -PLACE ) ], [-1, 1] ],
